# Pseudorandom-number-generator

./: CMakeLists.txt  LICENSE  README.md  lrnd32_h.cpp  lrnd32_opt.cpp  lrnd32_opt.hpp  lrnd_core.hpp  lrnd_table.hpp  lrnd_types.hpp  thinking.txt
archive/src/: lrnd32_opt.cpp  lrnd_base.cpp  lrnd_core.cpp
examples/: main.cpp
headers/: lrnd.hpp  lrnd32_opt.hpp  lrnd_base.hpp  lrnd_table.hpp  lrnd_types.hpp  lrnd_utils.hpp
include/: lrnd.hpp  lrnd_base.hpp  lrnd_table.hpp  lrnd_types.hpp  lrnd_utils.hpp
sources/: lrnd_base.cpp  main.cpp
tests/: CMakeLists.txt  test_consistency.cpp  test_constructors.cpp  test_discard.cpp
